force-app/main/default/objects/Opportunity/fields/Amount_In_Euro__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_Euro__c</fullName>
    <formula>&quot;£&quot;&amp; TEXT( EUR__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount In EUR</label>
    <type>Text</type>
</CustomField>