force-app/main/default/objects/Opportunity/fields/Amount_In_GBP__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_GBP__c</fullName>
    <formula>&quot;£&quot;&amp; TEXT( GBP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount In GBP</label>
    <type>Text</type>
</CustomField>