force-app/main/default/objects/Opportunity/fields/Amount_In_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_USD__c</fullName>
    <formula>&quot;$&quot; &amp;  TEXT( USD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount In USD</label>
    <type>Text</type>
</CustomField>