force-app/main/default/objects/Opportunity/fields/GBP__c.field-meta.xml
<CustomField>
    <fullName>GBP__c</fullName>
    <label>GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>