force-app/main/default/objects/Opportunity/fields/USD__c.field-meta.xml
<CustomField>
    <fullName>USD__c</fullName>
    <label>USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>